[package]
name = "rayon-cond"
version = "0.2.0"
authors = ["Josh Stone <cuviper@gmail.com>"]
description = "Experimental iterator wrapper that is conditionally parallel or serial."
repository = "https://github.com/cuviper/rayon-cond"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["parallel", "iterator"]
categories = ["concurrency"]
exclude = ["/.cirrus.yml"]

[dependencies]
rayon = "1.5"
itertools = "0.10"
either = "1.6"
